--- a/index.html
+++ b/index.html
@@ -4,25 +4,14 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title></title>
-
-		<!-- VUE-->
-		<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>  -->
-
-
 		<!-- AXIOS -->
 		<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
 
 
-		<!-- Boostrap 4.5.3 (CDN) -->
-		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
-
 		<!-- Font Awesome 5.15.1 (CDN) -->
 		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" /> -->
-
-
-
 		<!-- jQuery 3.5.1 (CDN) -->
-		<!-- <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script> -->
+		<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
 		<!-- Custom CSS -->
 
@@ -32,6 +21,14 @@
         <script defer src="js/main.js" charset="utf-8"></script>
 	</head>
 	<body>
+		<canvas id="canvas" width="800" height="800"></canvas>
+		<div class="toolbox">
+			<button id="decrease">-</button>
+			<span id="size">10</span>
+			<button id="increase">+</button>
+			<input type="color" id="color">
+			<button id="clear">X</button>
+		</div>
 		
 		
 	</body>
